apps/memos/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: veirt.dev/node-pool
                    operator: In
                    values:
                      - vps
      tolerations:
        - key: "veirt.dev/node-pool"
          operator: "Equal"
          value: "vps"
          effect: "NoSchedule"
      containers:
        - name: memos
          image: neosmemo/memos:0.31.0
          ports:
            - containerPort: 5230
          resources:
            requests:
              memory: 32Mi
            limits:
              memory: 64Mi
          volumeMounts:
            - name: data-volume
              mountPath: /var/opt/memos
              subPath: memos
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
