apps/memos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos-service
spec:
  selector:
    app: memos
  ports:
    - protocol: TCP
      port: 5230
      targetPort: 5230
  type: LoadBalancer
